# ndev_activator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cd_main.yml  cd_pr.yml
docker-scripts/: docker_build_arm32  docker_build_arm64  docker_build_base
docker-scripts/build-dockers/: Dockerfile  build-builder.sh  docker_build_starter  linux_install_packages.sh
include/: ndev_communications.hpp  ndev_driver_communications.hpp  ndev_libusb_communications.hpp  usb_generic.hpp  utils.hpp
setup_scripts/: macos_bundle_signature.sh
source/: ndev_activator.cpp  ndev_communications.cpp  ndev_driver_communications.cpp  ndev_libusb_communications.cpp  usb_generic.cpp  utils.cpp
tools/: CMakeLists.txt
usb_rules/: 51-ndev.rules
